--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ nav{
     margin-top: 15px;
 }
 nav .logo{
-    margin-left: 50px;
+    margin-left:170px;
 }   
 .list{
     width: 540px;
@@ -62,22 +62,23 @@ li a:hover{
     width: 100%;
     height:70vh;
     display: flex;
-    margin-top: 25vh;
+    margin-top: 10vh;
 }
 #home .content-1{
     color: #777777;
     padding-bottom:10px ;
-    margin-left: 150px;
+    margin-left: 245px;
 }
 #home .content-1 h1{
     font-size: 3vw;
     font-weight: bolder;
-    color: #414141;
+    color: #777777;
     /* margin-bottom: 20px; */
 }
 .paragraph{
     margin-bottom: 50px;
     font-size: 1vw;
+    color: #777777;
 }
 #button{
     width: 80px;
@@ -106,9 +107,9 @@ li a:hover{
 }
 #home .content-2 .background{
     background-color: #F5F5F5F5;
-    width: 810px;
+    width: 700px;
     height: 370px;
-    margin-left: 80px;
+    margin-left: 100px;
     border-radius: 80px;
     padding-left: 100px;
 }
@@ -131,24 +132,24 @@ li a:hover{
 }
 #about{
     width: 100%;
-    height: 70vh;
+    height: 90vh;
 }
 .about-head{
-    margin-top: 25vh;
-    margin-left: 150px;
+    margin-top: 5vh;
+    margin-left: 245px;
 
 }
 .head-1{
     font-size: 2.5vw;
     font-weight: bolder;
-    color: #414141;
+    color: #777777;
 }
 .line{
     width: 5%;
     border: thin solid rgb(158, 59, 75) !important;
 }
 .para{
-    color: #414141;
+    color: #777777;
     font-size: 1vw;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-top: 10px;
@@ -165,7 +166,7 @@ li a:hover{
     height: 370px;
     background-color: #EFA614;
     border-radius: 10px;
-    margin-left:150px ;
+    margin-left:245px ;
 }
 #about .about-content .backg img{
     position: absolute;
@@ -175,15 +176,18 @@ li a:hover{
 #about .writeup{
     width: 400px;
     height: auto;
-    margin-left: 260px;
+    margin-left: 290px;
     margin-top: 50px;
+}
+.writeup h1{
+    color: #777777;
 }
 #portfolio{
     width: 100%;
     height: 130vh;
 }
 #portfolio #p-list{
-    margin-left: 150px;
+    margin-left: 245px;
     margin-top: 30px;
 }
 #portfolio .port-images{
@@ -191,14 +195,14 @@ li a:hover{
     height: 60vh;
     display: flex;
     flex-wrap: wrap;
-    margin-left: 150px;
+    margin-left: 245px;
     margin-top: 20px;
 }
 #portfolio .port-images .image{
     width: 237px;
     height: 256px;
-    margin-right: 30px;
-    margin-top: 30px;
+    margin-right: 20px;
+    margin-top: 20px;
 }
 #portfolio .port-images #im-1{
     margin-bottom: 17px;
@@ -213,7 +217,7 @@ li a:hover{
     width: 70%;
     height: auto;
     display: flex;
-    margin-left: 150px;
+    margin-left: 245px;
     margin-top: 40px;
 }
 .prog-container{
@@ -227,6 +231,9 @@ li a:hover{
 .prog-container .prog-writeup{
     display: flex;
     justify-content:space-between;
+}
+.prog-writeup p{
+    color: #777777;
 }
 .progress{
     width: 100%;
@@ -272,7 +279,7 @@ li a:hover{
     height: auto;
     display: flex;
     flex-wrap: wrap;
-    margin-left: 150px;
+    margin-left: 245px;
     margin-top: 60px;
 }
 .services-content .icon-writeup{
@@ -292,6 +299,7 @@ li a:hover{
 }
 .services-image{
     width: 100%;
+    height: 230px;
 }
 .services-image img{
     width: 100%;
@@ -305,7 +313,7 @@ li a:hover{
     width: 70%;
     display: flex;
     height: 400px;
-    margin-left: 150px;
+    margin-left: 245px;
     margin-top: 40px;
 }
 .reviews-2 .sub-reviews{
@@ -358,7 +366,7 @@ li a:hover{
     width: 600px;
     height: auto;
     display: flex;
-    margin-left: 150px;
+    margin-left: 245px;
     margin-top: 50px;
 }
 .latest-update-1 .update-1{
@@ -413,7 +421,7 @@ li a:hover{
     width: 70%;
     height: auto;
     display: flex;
-    margin-left: 150px;
+    margin-left: 245px;
     margin-top: 50px;
 }
 .contact-2{
@@ -472,7 +480,7 @@ footer .footer-1{
     width: 70%;
     height: 200px;
     display: flex;
-    margin-left: 150px;
+    margin-left: 245px;
 }
 .footer-1 .sub-foot{
     width: 150px;
